# ESOGU-PickandPlaceScenario

./: README (1).md  README.md
Universal_Robots_ROS2_Tutorials/my_robot_cell/my_robot_cell_control/: CMakeLists.txt  package.xml
Universal_Robots_ROS2_Tutorials/my_robot_cell/my_robot_cell_control/config/: simrobot_ur_controllers.yaml
Universal_Robots_ROS2_Tutorials/my_robot_cell/my_robot_cell_control/launch/: hil_test.launch.py  hil_test_algorithm.launch.py  hil_test_algorithm_joint.launch.py  (+7 more)
agv_description/: CMakeLists.txt  package.xml
agv_description/launch/: view_agv.launch.py
agv_description/rviz/: agv_description.rviz
agv_description/urdf/: agv.urdf.xacro  agv_base.urdf.xacro  agv_caster.urdf.xacro  agv_combined_ignition.urdf.xacro  agv_ir.urdf.xacro  agv_plugin.urdf.xacro  agv_wheel.urdf.xacro  macro_ignition.xacro
festo_edcon_ros2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
festo_edcon_ros2/action/: MoveAxis.action
festo_edcon_ros2/festo_edcon_ros2/: linear_axis_action_server.py  linear_axis_adapter.py  linear_axis_runner.py
mobile_manipulator_description/: CMakeLists.txt  package.xml
mobile_manipulator_description/bridge/: bridge.yaml
mobile_manipulator_description/config/: mobile_manipulator_controllers.yaml  ns_rs005l_controllers.yaml  ota_controllers.yaml  rs005l_controllers.yaml
mobile_manipulator_description/launch/: gazebo_view_robot.launch.py  ota_gazebo_start.launch.py  view_combined_robots.launch.py  view_robot.launch.py  whole_ifarlab_gazebo.launch.py
mobile_manipulator_description/log/: latest_build
mobile_manipulator_description/scripts/: move_agv_timed.py  move_agv_to_position.py
mobile_manipulator_description/urdf/: mobile_manipulator.urdf.xacro  ota.urdf.xacro
mobile_manipulator_description/urdf/khi_rs/: common.gazebo.xacro  rs.transmission.xacro  rs005l.ros2_control.xacro  rs005l.urdf.xacro  rs005l_macro.xacro  rs005l_with_capsules.urdf.xacro  rs005l_with_capsules_macro.xacro  rs005l_with_gripper.urdf.xacro  rs005l_with_gripper_macro.xacro  rs_with_gripper.transmission.xacro
mobile_manipulator_description/urdf/ota/: inertia_tensors.urdf.xacro  ota.ros2_control.xacro  ota_base.xacro  ota_caster.xacro  ota_ir.xacro  ota_macro.xacro  ota_plugin.xacro  ota_wheel.xacro
mobile_manipulator_description/worlds/: ifarlab.sdf
pointcloud_transformer/: CMakeLists.txt  package.xml
pointcloud_transformer/src/: pointcloud_transformer_node.cpp  pose_transformer_node.cpp
pymoveit2_kawasaki_sim/: CMakeLists.txt  package.xml
pymoveit2_kawasaki_sim/examples/: agv_kawa_goal.py  combined_ex_pose_goal.py  combined_joint_goal.py  dualrobot_sim_robot_goal.py  sim_robot_goal.py  sim_robot_joint_goal.py
pymoveit2_kawasaki_sim/pymoveit2_kawasaki_sim/: gripper_command.py  moveit2.py
pymoveit2_kawasaki_sim/pymoveit2_kawasaki_sim/robots/: robot2_ur.py  ur.py
pymoveit2_real/: CMakeLists.txt  package.xml
pymoveit2_real/examples/: combined_joint_goal.py  combined_xyz_goal.py  ex_collision_primitive.py  real_robot_goal.py  real_robot_joint_goal.py  recording.py
pymoveit2_real/pymoveit2_real/: gripper_command.py  moveit2.py
pymoveit2_real/pymoveit2_real/robots/: ur.py
pymoveit2_sim/: CMakeLists.txt  package.xml
pymoveit2_sim/examples/: cleaning_mission_runner.py  cleaning_mission_runner_v2.py  cleaning_mission_runner_v3.py  red_detection_node.py  red_detection_node_v2.py  red_detection_node_v3.py  sensing_robot.py  sensing_robot_v2.py  sensing_robot_v3.py  sim_robot_goal.py  sim_robot_joint_goal.py
pymoveit2_sim/examples/detection_results/: red_points_20260122_160805.csv  red_points_20260123_131840.csv  red_points_20260123_132655.csv  red_points_20260123_134034.csv  red_points_20260123_134918.csv  red_points_20260123_135615.csv  red_points_20260123_140337.csv  red_points_20260123_141430.csv  red_points_20260123_142307.csv  red_points_20260123_144042.csv  red_points_20260123_145328.csv  red_points_20260123_145408.csv  red_points_20260123_145448.csv  red_points_20260123_145512.csv  red_points_20260123_182450.csv  red_points_20260123_183244.csv  red_points_20260125_145111.csv  report_20260122_161101.txt  report_20260123_132240.txt  report_20260123_132853.txt  report_20260123_134524.txt  report_20260123_135516.txt  report_20260123_140637.txt  report_20260123_141746.txt  report_20260123_142742.txt  report_20260123_144049.txt  report_20260123_145332.txt  report_20260123_145417.txt  report_20260123_145458.txt  report_20260123_150038.txt  report_20260123_182859.txt  report_20260123_183016.txt  report_20260123_183103.txt  report_20260123_183703.txt  report_v2_20260125_143007.txt  report_v2_20260125_143619.txt  report_v2_20260125_143726.txt  report_v2_20260125_144142.txt  report_v2_20260125_145001.txt  report_v2_20260125_145614.txt  (+7 more)
pymoveit2_sim/pymoveit2_sim/: moveit2.py
pymoveit2_sim/pymoveit2_sim/robots/: combined_ur.py  ur.py
rs005l_gazebo/: CMakeLists.txt  package.xml
rs005l_gazebo/launch/: agv_rs005l_gazebo_start.launch.py  rs005l_gazebo_start.launch.py
rs005l_gazebo/src/: deneme.py
rs005l_gazebo/worlds/: ifarlab.world
sick_visionary_ros/: CMakeLists.txt  README.md  package.xml
sick_visionary_ros/launch/: sick_visionary-s.launch  sick_visionary-t_mini.launch
sick_visionary_ros/sick_visionary_cpp_shared/: CMakeLists.txt  package.xml
sick_visionary_ros/src/: visionary_t_mini.cpp
sir_robot_ros_interface/agv_msgs/: CMakeLists.txt  package.xml
sir_robot_ros_interface/agv_msgs/srv/: FabMsgs.srv
sir_robot_ros_interface/sir_robot_ros_interface/: CMakeLists.txt  package.xml
sir_robot_ros_interface/sir_robot_ros_interface/include/: SIRPoseDB.h  SIRTypeDefs.h  khi_ota_comm.h  khi_ota_comm_valu3s.h
sir_robot_ros_interface/sir_robot_ros_interface/scripts/: ros_service_client.py
sir_robot_ros_interface/sir_robot_ros_interface/tests/: KawasakiRobotJointPublisher.cpp  KawasakiRobotTestForLinux.cpp  KawasakiRobotTestForLinux_Valu3s.cpp  KawasakiRobotTestForLinux_Valu3s_ino_2.cpp  ROS2KawasakiRobotConnectionTest.cpp  ROS2KawasakiRobotGazeboJSP.cpp  ROS2KawasakiRobotJointStatePublisher.cpp  ROS2KawasakiRobotMove.cpp
(+169 files in other folders)
