<?xml version="1.0"?>
<package format="3">
  <name>mobile_manipulator_description</name>
  <version>0.0.1</version>
  <description>Mobile manipulator (AGV + Kawasaki RS005L) description package for ROS 2 Humble.</description>

  <author>Cem Süha Yılmaz</author>
  <maintainer email="cshyilmaz@gmail.com">Sezgin Secil</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rs005l_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
