<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_transformer</name>
  <version>1.0.0</version>
  <description>The pointcloud_transformer package</description>
  <maintainer email="cshyilmaz@gmail.com">Cem Süha Yılmaz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
