<?xml version="1.0"?>
<package format="3">
  <name>sick_visionary_ros</name>
  <version>1.1.2</version>
  <description>Open source drivers for the SICK Visionary-S 3D camera and Visionary-T Mini 3D-ToF camera.</description>
  <license>Unlicense</license>

  <maintainer email="techsupport3dsnapshot@sick.de">SICK AG TechSupport 3D Snapshot</maintainer>
  <author email="techsupport3dsnapshot@sick.de">SICK AG TechSupport 3D Snapshot</author>

  <!-- Build tool for ROS2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>diagnostic_updater</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>libpcl-all-dev</depend>

  <!-- Test dependencies (opsiyonel) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosindex>
      <tags>
        <tag>SICK</tag>
        <tag>Visionary-S</tag>
        <tag>Visionary-T Mini</tag>
        <tag>3D snapshot</tag>
        <tag>3D vision</tag>
        <tag>stereo</tag>
        <tag>time-of-flight</tag>
      </tags>
    </rosindex>
  </export>
</package>
